--- a/pom.xml
+++ b/pom.xml
@@ -6,14 +6,14 @@
     <!-- apache-maven-3.5.0 -->
 
     <groupId>com.tiny.flink</groupId>
-    <artifactId>flink-learn</artifactId>
+    <artifactId>flink-tutorial</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>api</module>
     </modules>
 
-    <name>flink-learn</name>
+    <name>flink-tutorial</name>
     <url>https://itinycheng.github.io</url>
 
     <properties>
